# mlflow-or-crash-course

./: .gitignore  BLOG_COMPANION.md  DEMO.md  README.md  TASKS.md  databricks.yml  pyproject.toml
notebooks/: inventory_optimization_crash_course.py
resources/: jobs.yml  uc.yml
scripts/: deploy_databricks.py
src/mlflow_or_crash_course/: __init__.py  cli.py  deployment.py  jobs.py  problem.py  serving.py  solvers.py  types.py  workflow.py
tests/: test_solvers.py  test_workflow.py
